Fix for alignment of moderation button text and search button, thanks to Arg

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1299,7 +1299,7 @@ img.sort {
 .buttonlist ul li a span {
 	display: block;
 	height: 2.2em;
-	line-height: 2.5em;
+	line-height: 2.2em;
 	padding: 0 8px;
 }
 /* the active one */
@@ -1385,8 +1385,8 @@ img.sort {
 	padding: 1px;
 }
 #search_form .button_submit {
-	padding: 1px 2px;
-	margin: -1px 5px;
+	padding: 2px 5px;
+	margin: 1px 2px;
 	background: #fff url(../images/theme/lower_section.png) 0 45% repeat-x;
 	color: #333;
 }
